# poem-admin

./: .env  .gitignore  Cargo.toml  medicinal.sql
app/: Cargo.toml
app/src/: lib.rs
app/src/apps/: mod.rs
app/src/apps/his/: mod.rs
app/src/apps/his/api/: his_category.rs  his_medicinal.rs  mod.rs
app/src/apps/his/service/: his_category.rs  his_medicinal.rs  mod.rs
app/src/apps/system/service/: sys_menu.rs
app/src/sms/: sms.rs
config/: config.toml
config/cert/: emacsvi.com.cer
data/sqlite/: data.db-shm  data.db-wal
db/: Cargo.toml
db/src/: lib.rs
db/src/his/: mod.rs
db/src/his/entities/: category.rs  medicinal.rs  mod.rs  prelude.rs
db/src/his/models/: category.rs  medicinal.rs  mod.rs
