[package]
edition = "2021"
name = "db"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#
configs = {path = "../configs"}
#
poem = {version = "1", features = ["static-files", "rustls", "anyhow"]}
#
chrono = {version = "0.4", features = ["serde"]}
once_cell = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio = {version = "1", features = ["rt-multi-thread", "macros", "parking_lot", "signal"]}
tracing = {git = "https://github.com/tokio-rs/tracing.git"}

[dependencies.sea-orm]
default-features = false
features = ["macros", "runtime-tokio-native-tls"]
version = "0.8"

[features]
# default = ["postgres"]
default = ["postgres", "mysql", "sqlite"]
mysql = ["sea-orm/sqlx-mysql"]
postgres = ["sea-orm/sqlx-postgres"]
sqlite = ["sea-orm/sqlx-sqlite"]


[dev-dependencies]
tokio-test = "*"
tokio = { version = "1.17.0", features = ["full"] }
tracing-subscriber = { version = "0.3.2", features = ["time", "local-time", "env-filter"] }